--- a/src/station12.html
+++ b/src/station12.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Station 12</title>
   </head>
+  <script src="./scripts/station12.js"></script>
   <body>
     <div class="card-container">
       <div class="card">
-          <p id="result"></p>
+        <p id="result"></p>
       </div>
     </div>
   </body>
